hphp/test/zend/good/ext/dom/tests/DOMDocument_validate_error2.php.expectf

Fatal error: Non-static method DOMDocument::validate() cannot be called statically in %s/DOMDocument_validate_error2.php on line 2
